# corepc

./: CODEOWNERS  Cargo.toml  README.md  clippy.toml  justfile  notes.md
bitcoind/: .#Cargo.toml  CHANGELOG.md  Cargo.toml  build.rs
bitcoind/src/: client_versions.rs  lib.rs  versions.rs
bitreq/: CHANGELOG.md  Cargo.toml  README.md
bitreq/.github/workflows/: msrv.yml
bitreq/contrib/: test_vars.sh
bitreq/examples/: async_hello.rs  hello.rs  iterator.rs  no-std.rs  wasm_example.rs
bitreq/fuzz/: Cargo.toml  README.md  ci-fuzz.sh
bitreq/fuzz/src/: lib.rs  url_parse.rs
bitreq/src/: client.rs  connection.rs  error.rs  http_url.rs  lib.rs  proxy.rs  request.rs  response.rs  url.rs  wasm.rs
bitreq/src/connection/: rustls_stream.rs
bitreq/tests/: main.rs  setup.rs  url_parity.rs  url_properties.rs
bitreq/tests/common/: mod.rs
client/: CHANGELOG.md  Cargo.toml  README.md
client/src/: lib.rs
client/src/client_sync/: error.rs  mod.rs  v18.rs  v20.rs  v21.rs  v23.rs  v24.rs  v25.rs  v26.rs  v27.rs  v28.rs
client/src/client_sync/v17/: blockchain.rs  control.rs  generating.rs  hidden.rs  mining.rs  mod.rs  network.rs  raw_transactions.rs  util.rs  wallet.rs  zmq.rs
client/src/client_sync/v18/: control.rs  mining.rs  mod.rs  network.rs  raw_transactions.rs  util.rs  wallet.rs
client/src/client_sync/v19/: blockchain.rs  mod.rs  wallet.rs
client/src/client_sync/v20/: generating.rs  hidden.rs  mod.rs
client/src/client_sync/v21/: blockchain.rs  generating.rs  hidden.rs  mod.rs  util.rs  wallet.rs
client/src/client_sync/v22/: blockchain.rs  hidden.rs  mod.rs  signer.rs  wallet.rs
client/src/client_sync/v23/: blockchain.rs  mod.rs  wallet.rs
client/src/client_sync/v24/: blockchain.rs  mod.rs  wallet.rs
client/src/client_sync/v25/: blockchain.rs  generating.rs  mod.rs
client/src/client_sync/v26/: blockchain.rs  hidden.rs  mining.rs  mod.rs  network.rs  raw_transactions.rs
client/src/client_sync/v27/: hidden.rs  mod.rs
client/src/client_sync/v28/: mod.rs  raw_transactions.rs  wallet.rs
client/src/client_sync/v29/: blockchain.rs  hidden.rs  mod.rs  util.rs
client/src/client_sync/v30/: mod.rs
client/src/client_sync/v31/: blockchain.rs  mod.rs  raw_transactions.rs
electrsd/: CHANGELOG.md  Cargo.toml  README.md  build.rs
electrsd/contrib/: extra_tests.sh  test_vars.sh
electrsd/src/: error.rs  ext.rs  lib.rs  versions.rs
integration_test/: Cargo.toml  README.md
integration_test/src/: lib.rs
integration_test/src/v17/: wallet.rs
integration_test/tests/: blockchain.rs  blockchain_core.rs  control.rs  control_core.rs  generating.rs  hidden.rs  mining.rs  mining_core.rs  network.rs  network_core.rs  raw_transactions.rs  raw_transactions_core.rs  signer.rs  util.rs  util_core.rs  v17_api.rs  wallet.rs  wallet_core.rs  zmq.rs
jsonrpc/: CHANGELOG.md  Cargo.toml  README.md
jsonrpc/contrib/: test_vars.sh
jsonrpc/src/: client.rs  error.rs  lib.rs
jsonrpc/src/http/: bitreq_http.rs  minreq_http.rs  mod.rs  simple_http.rs
node/: CHANGELOG.md  Cargo.toml  README.md  build.rs
node/contrib/: extra_tests.sh  test_vars.sh
node/src/: client_versions.rs  lib.rs  versions.rs
types/: CHANGELOG.md  Cargo.toml  README.md
types/contrib/: test_vars.sh
types/src/: lib.rs
types/src/model/: blockchain.rs  generating.rs  hidden.rs  mining.rs  mod.rs  network.rs  raw_transactions.rs  util.rs  wallet.rs
types/src/psbt/: README.md  error.rs  mod.rs
types/src/v17/: control.rs  generating.rs  mining.rs  mod.rs  raw_transactions.rs  util.rs  zmq.rs
types/src/v17/blockchain/: error.rs  into.rs  mod.rs
types/src/v17/hidden/: error.rs  into.rs  mod.rs
types/src/v17/mining/: error.rs  into.rs  mod.rs
types/src/v17/network/: error.rs  into.rs  mod.rs
types/src/v17/raw_transactions/: error.rs  into.rs  mod.rs
types/src/v17/util/: error.rs  into.rs  mod.rs
types/src/v17/wallet/: error.rs  into.rs  mod.rs
types/src/v18/: control.rs  mod.rs  zmq.rs
types/src/v18/blockchain/: into.rs  mod.rs
types/src/v18/network/: into.rs  mod.rs
types/src/v18/raw_transactions/: error.rs  into.rs  mod.rs
types/src/v18/util/: into.rs  mod.rs
types/src/v18/wallet/: error.rs  into.rs  mod.rs
types/src/v19/: blockchain.rs  control.rs  mod.rs  util.rs  wallet.rs
types/src/v19/blockchain/: error.rs  into.rs  mod.rs
types/src/v19/network/: into.rs  mod.rs
types/src/v19/wallet/: error.rs  into.rs  mod.rs
types/src/v20/: control.rs  generating.rs  mod.rs  network.rs
types/src/v20/util/: into.rs  mod.rs
types/src/v20/wallet/: error.rs  into.rs  mod.rs
types/src/v21/: hidden.rs  mod.rs  util.rs  wallet.rs
types/src/v21/blockchain/: into.rs  mod.rs
types/src/v21/generating/: error.rs  into.rs  mod.rs
types/src/v21/network/: into.rs  mod.rs
types/src/v21/raw_transactions/: error.rs  into.rs  mod.rs
types/src/v21/wallet/: error.rs  into.rs  mod.rs
types/src/v22/: blockchain.rs  control.rs  mod.rs  network.rs  signer.rs
types/src/v22/blockchain/: into.rs  mod.rs
types/src/v22/hidden/: mod.rs
types/src/v22/raw_transactions/: error.rs  into.rs  mod.rs
types/src/v22/wallet/: into.rs  mod.rs
types/src/v23/: blockchain.rs  control.rs  mod.rs  network.rs
types/src/v23/blockchain/: error.rs  into.rs  mod.rs
types/src/v23/raw_transactions/: error.rs  into.rs  mod.rs
types/src/v23/util/: into.rs  mod.rs
types/src/v23/wallet/: error.rs  into.rs  mod.rs
types/src/v24/: mod.rs  network.rs
types/src/v24/blockchain/: error.rs  into.rs  mod.rs
types/src/v24/raw_transactions/: error.rs  into.rs  mod.rs
types/src/v24/wallet/: error.rs  into.rs  mod.rs
types/src/v25/: control.rs  mod.rs  wallet.rs
types/src/v25/blockchain/: error.rs  into.rs  mod.rs
types/src/v25/generating/: error.rs  into.rs  mod.rs
types/src/v26/: blockchain.rs  control.rs  hidden.rs  mining.rs  mod.rs  network.rs  wallet.rs
types/src/v27/: mining.rs  mod.rs
types/src/v28/: blockchain.rs  control.rs  hidden.rs  mining.rs  mod.rs  network.rs
types/src/v29/: mod.rs  network.rs  util.rs
types/src/v30/: mod.rs
types/src/v31/: mod.rs
(+97 files in other folders)
