[workspace]
members = [ "bitreq", "client", "jsonrpc", "node", "types", "electrsd"]
exclude = ["integration_test", "verify"]
resolver = "2"

[patch.crates-io.corepc-client]
path = "client"

[patch.crates-io.jsonrpc]
path = "jsonrpc"

[patch.crates-io.corepc-node]
path = "node"

[patch.crates-io.corepc-types]
path = "types"
