[package]
name = "electrsd"
version = "0.39.0"
authors = ["Riccardo Casatta <riccardo@casatta.it>"]
description = "Utility to run a regtest electrs process, useful in integration testing environment"
repository = "https://github.com/rust-bitcoin/corepc"
documentation = "https://docs.rs/electrsd/"
license = "MIT"
edition = "2021"
rust-version = "1.75.0"
categories = ["cryptography::cryptocurrencies", "development-tools::testing"]
exclude = ["tests", "contrib"]

[dependencies]
bitcoind = { version = "0.39.0", path = "../bitcoind" }
corepc-client = { version = "0.15.0", path = "../client" }
electrum-client = { version = "0.24.0", default-features = false }
log = { version = "0.4" }

[target.'cfg(not(windows))'.dependencies]
nix = { version = "0.25.0" }

[dev-dependencies]
env_logger = { version = "0.10" }

[build-dependencies]
anyhow = { version = "1.0.66", default-features = false, features = ["std"], optional = true }
bitcoin_hashes = { version = "0.14", optional = true }
zip = { version = "0.6", default-features = false, optional = true, features = [
  "bzip2",
  "deflate",
] }
bitreq = { version = "0.3.5", path = "../bitreq", optional = true, features = ["https"] }

[features]
default = ["electrs_0_10_6"]

legacy = []

# download is not supposed to be used directly only through selecting one of the version feature
download = ["anyhow", "bitcoin_hashes", "zip", "bitreq"]

esplora_a33e97e1 = ["download", "legacy"]
electrs_0_8_10 = ["download"]
electrs_0_9_1 = ["download"]
electrs_0_9_11 = ["download"]
electrs_0_10_6 = ["download"]

bitcoind_download = ["bitcoind/download", "download"]

bitcoind_30_2 = ["bitcoind/30_2"]
bitcoind_29_0 = ["bitcoind/29_0"]
bitcoind_28_2 = ["bitcoind/28_2"]
bitcoind_27_2 = ["bitcoind/27_2"]
bitcoind_26_2 = ["bitcoind/26_2"]
bitcoind_25_2 = ["bitcoind/25_2"]
bitcoind_24_2 = ["bitcoind/24_2"]
bitcoind_23_2 = ["bitcoind/23_2"]
bitcoind_22_1 = ["bitcoind/22_1"]
bitcoind_0_21_2 = ["bitcoind/0_21_2"]
bitcoind_0_20_2 = ["bitcoind/0_20_2"]
bitcoind_0_19_1 = ["bitcoind/0_19_1"]
bitcoind_0_18_1 = ["bitcoind/0_18_1"]
bitcoind_0_17_2 = ["bitcoind/0_17_2"]

# This flag should never be manually set. Used to handle `--all-features` was used.
all_features = []

[package.metadata.docs.rs]
features = ["electrs_0_10_6"]
rustdoc-args = ["--cfg", "docsrs"]

[package.metadata.rbmt.lint]
# The electrsd crate requires a version feature to compile
features = ["electrs_0_10_6"]
# Duplicates from build-dep/dep splits, --target=all, or upstream version conflicts.
allowed_duplicates = [
    "anyhow",           # build-dep and regular dep, same version
    "base64",           # upstream version conflicts
    "bitcoin_hashes",   # build-dep (download) and transitive dep, same version
    "bitflags",         # upstream version conflicts
    "bitreq",           # build-dep (download) and regular dep, same version
    "libc",             # same version, appears twice under --target=all
    "linux-raw-sys",    # same version, appears twice under --target=all
    "rustix",           # same version, appears twice under --target=all
    "windows-sys",      # upstream version conflicts
]
