[package]
name = "integration-test"
version = "0.1.0"
authors = ["Tobin C. Harding <me@tobin.cc>"]
license = "CC0-1.0"
description = "Integration tests for corepc"
edition = "2021"

# Please note, in this crate the version features are mutally exclusive.
#
# - `cargo test --all-features` does not work - select a single version.
# - `cargo test --no-default-features` skips all tests.
[features]
# Enable the same feature in `node` and the version feature here.
# All minor releases of the latest three versions.
28_0 = ["v28", "node/28_0"]
27_2 = ["v27", "node/27_2"]
27_1 = ["v27", "node/27_1"]
27_0 = ["v27", "node/27_0"]
26_2 = ["v26", "node/26_2"]
26_1 = ["v26", "node/26_1"]
26_0 = ["v26", "node/26_0"]
# Only the latest minor version for older versions.
25_2 = ["v25", "node/25_2"]
24_2 = ["v24", "node/24_2"]
23_2 = ["v23", "node/23_2"]
22_1 = ["v22", "node/22_1"]
0_21_2 = ["v21", "node/0_21_2"]
0_20_2 = ["v20", "node/0_20_2"]
0_19_1 = ["v19", "node/0_19_1"]
0_18_1 = ["v18", "node/0_18_1"]
0_17_1 = ["v17", "node/0_17_1"]

# These features are just for internal use (feature gating).
# Each major version is tested with the same client.
v28 = []
v27 = []
v26 = []
v25 = []
v24 = []
v23 = []
v22 = []
v21 = []
v20 = []
v19 = []
v18 = []
v17 = []

TODO = []                       # This is a dirty hack while writing the tests.

[dependencies]
bitcoin = { version = "0.32.0", default-features = false, features = ["std", "serde"] }
client = { package = "corepc-client", version = "0.7.0", default-features = false, features = ["client-sync"] }
node = { package = "corepc-node", version = "0.7.1", default-features = false, features = ["download"] }
rand = "0.8.5"
env_logger = "0.9.0"

[dev-dependencies]

[patch.crates-io.corepc-client]
path = "../client"

[patch.crates-io.corepc-types]
path = "../types"

[patch.crates-io.corepc-node]
path = "../node"
