[package]
name = "integration-test"
version = "0.1.0"
authors = ["Tobin C. Harding <me@tobin.cc>"]
license = "CC0-1.0"
description = "Integration tests for corepc"
edition = "2021"

# Please note, in this crate the version features are mutally exclusive.
#
# - `cargo test --all-features` does not work - select a single version.
# - `cargo test --no-default-features` skips all tests.
[features]
download = ["node/download"]

# Enable the same feature in `node` and the version feature here.
# All minor releases of the latest four versions.
30_0 = ["v30_and_below", "node/30_0"]
29_0 = ["v29_and_below", "node/29_0"]
28_2 = ["v28_and_below", "node/28_2"]
28_1 = ["v28_and_below", "node/28_1"]
28_0 = ["v28_and_below", "node/28_0"]
27_2 = ["v27_and_below", "node/27_2"]
27_1 = ["v27_and_below", "node/27_1"]
27_0 = ["v27_and_below", "node/27_0"]
# Only the latest minor version for older versions.
26_2 = ["v26_and_below", "node/26_2"]
25_2 = ["v25_and_below", "node/25_2"]
24_2 = ["v24_and_below", "node/24_2"]
23_2 = ["v23_and_below", "node/23_2"]
22_1 = ["v22_and_below", "node/22_1"]
0_21_2 = ["v21_and_below", "node/0_21_2"]
0_20_2 = ["v20_and_below", "node/0_20_2"]
0_19_1 = ["v19_and_below", "node/0_19_1"]
0_18_1 = ["v18_and_below", "node/0_18_1"]
0_17_2 = ["v17", "node/0_17_2"]

# These features are just for internal use (feature gating).
# Each major version is tested with the same client.
# A specific range of versions can be specified e.g. for 24-26:
# #[cfg(all(feature = "v26_and_below", not(feature = "v23_and_below")))]
v30_and_below = []
v29_and_below = ["v30_and_below"]
v28_and_below = ["v29_and_below"]
v27_and_below = ["v28_and_below"]
v26_and_below = ["v27_and_below"]
v25_and_below = ["v26_and_below"]
v24_and_below = ["v25_and_below"]
v23_and_below = ["v24_and_below"]
v22_and_below = ["v23_and_below"]
v21_and_below = ["v22_and_below"]
v20_and_below = ["v21_and_below"]
v19_and_below = ["v20_and_below"]
v18_and_below = ["v19_and_below"]
v17 = ["v18_and_below"]

TODO = []                       # This is a dirty hack while writing the tests.

[dependencies]
bitcoin = { version = "0.32.0", default-features = false, features = ["std", "serde"] }
env_logger = "0.9.0"
node = { package = "corepc-node", version = "0.11.0", path = "../node", default-features = false }
rand = "0.8.5"
# Just so we can enable the feature.
types = { package = "corepc-types", version = "0.11.0", path = "../types", features = ["serde-deny-unknown-fields"] }

[dev-dependencies]


[patch.crates-io.corepc-client]
path = "../client"

[patch.crates-io.jsonrpc]
path = "../jsonrpc"

[patch.crates-io.corepc-node]
path = "../node"

[patch.crates-io.corepc-types]
path = "../types"
