[package]
name = "corepc-node"
version = "0.5.0"
authors = ["Riccardo Casatta <riccardo@casatta.it>", "Tobin C. Harding <me@tobin.cc>"]
license = "MIT"
repository = "https://github.com/rust-bitcoin/corepc"
description = "Utility to run a regtest bitcoind process, useful in integration testing environments"
categories = ["cryptography::cryptocurrencies", "development-tools::testing"]
keywords = ["bitcoin", "bitcoind", "json-rpc"]
readme = "README.md"
edition = "2021"
rust-version = "1.63.0"
exclude = ["tests", "contrib"]

[dependencies]
corepc-client = { version = "0.5.0", features = ["client-sync"] }
log = "0.4"
which = "4.2.5"
anyhow = "1.0.66"
tempfile = "3"
serde_json = { version = "1.0.117" }

[dev-dependencies]
env_logger = "0.9.0"

[build-dependencies]
bitcoin_hashes = { version = ">= 0.13, <= 0.14", optional = true }
flate2 = { version = "1.0", optional = true }
tar = { version = "0.4", optional = true }
minreq = { version = "2.9.1", default-features = false, features = [
    "https",
], optional = true }
zip = { version = "0.6", optional = true }
anyhow = "1.0.66"

# Please note, in this crate the version features are mutally exclusive.
#
# - `cargo test --features=27_2,download` to download Bitcoin Core binary v27.
# - `cargo test --all-features` is the same as `cargo test --features=download,v28_0`
# - `cargo test --features=28_0` to use `bitcoind`.
#
# If you do not enable `download` then you must configure the bitcoind binary by `bitcoind` in your
# path or using `BITCOIND_EXE=/path/to/bitcoind`. Note also that the feature enabled should match
# the version from `bitcoind --version`.
[features]
download = ["bitcoin_hashes", "flate2", "tar", "minreq", "zip"]

# We support all minor releases of the latest three versions.
28_0 = ["27_2"]
27_2 = ["27_1"]
27_1 = ["27_0"]
27_0 = ["26_2"]
26_2 = ["26_1"]
26_1 = ["26_0"]
26_0 = ["25_2"]

# We only support the latest minor version for older versions.
25_2 = ["24_2"]
24_2 = ["23_2"]
23_2 = ["22_1"]
22_1 = ["0_21_2"]
0_21_2 = ["0_20_2"]
0_20_2 = ["0_19_1"]
0_19_1 = ["0_18_1"]
0_18_1 = ["0_17_1"]
0_17_1 = []

doc = [] # Used only for documentation building.

[package.metadata.docs.rs]
features = ["download", "doc", "28_0"]
rustdoc-args = ["--cfg", "docsrs"]
