[package]
name = "corepc-node"
version = "0.11.0"
authors = ["Riccardo Casatta <riccardo@casatta.it>", "Tobin C. Harding <me@tobin.cc>"]
license = "MIT"
repository = "https://github.com/rust-bitcoin/corepc"
description = "Utility to run a regtest bitcoind process, useful in integration testing environments"
categories = ["cryptography::cryptocurrencies", "development-tools::testing"]
keywords = ["bitcoin", "bitcoind", "json-rpc"]
readme = "README.md"
edition = "2021"
rust-version = "1.75.0"
exclude = ["tests", "contrib"]

[dependencies]
anyhow = { version = "1.0.66", default-features = false, features = ["std"] }
corepc-client = { version = "0.11.0", path = "../client", features = ["client-sync"] }
log = { version = "0.4", default-features = false }
serde_json = { version = "1.0.117", default-features = false }
tempfile = { version = "3", default-features = false }
which = { version = "3.1.1", default-features = false }

[dev-dependencies]
env_logger = { version = "0.9.3", default-features = false }

[build-dependencies]
anyhow = { version = "1.0.66", optional = true }
bitcoin_hashes = { version = ">= 0.13, <= 0.14", optional = true }
flate2 = { version = "1.0", optional = true }
bitreq = { version = "0.3.0", path = "../bitreq", features = ["https"], optional = true }
tar = { version = "0.4", optional = true }
zip = { version = "0.6.6", default-features = false, features = ["bzip2", "deflate"], optional = true }

# Please note, it is expected that a single version feature will be enabled however if you enable
# multiple the highest version number will take precedence.
#
# - `cargo test --features=27_2,download` to download Bitcoin Core binary `v27.2`.
# - `cargo test --features=28_0` to use `bitcoind` from the host environment.
# - `cargo test` is equivalent to `cargo test --features=0_17_2`.
# - `cargo test --all-features`: Same as using latest version.
# - `cargo test --no-default-features` does not work, you MUST enable a version feature.
[features]
default = ["0_17_2"]

download = ["anyhow", "bitcoin_hashes", "flate2", "tar", "bitreq", "zip"]

latest = ["30_2"]

# We support all minor releases of the latest four versions.
30_2 = ["30_0"]
# Skip v30.1 due to wallet migration bug.
30_0 = ["29_0"]
29_0 = ["28_2"]
28_2 = ["28_1"]
28_1 = ["28_0"]
28_0 = ["27_2"]
27_2 = ["27_1"]
27_1 = ["27_0"]
27_0 = ["26_2"]

# We only support the latest minor version for older versions.
26_2 = ["25_2"]
25_2 = ["24_2"]
24_2 = ["23_2"]
23_2 = ["22_1"]
22_1 = ["0_21_2"]
0_21_2 = ["0_20_2"]
0_20_2 = ["0_19_1"]
0_19_1 = ["0_18_1"]
0_18_1 = ["0_17_2"]
0_17_2 = []

[package.metadata.docs.rs]
features = ["28_2"]
rustdoc-args = ["--cfg", "docsrs"]
