[package]
name = "corepc-types"
version = "0.5.0"
authors = ["Tobin C. Harding <me@tobin.cc>"]
license = "CC0-1.0"
repository = "https://github.com/rust-bitcoin/corepc"
description = "Bitcoin Core JSON-RPC API types"
categories = ["cryptography::cryptocurrencies"]
keywords = ["bitcoin", "bitcoind", "json-rpc"]
readme = "README.md"
edition = "2021"
rust-version = "1.63.0"
exclude = ["tests", "contrib"]

[features]
default = ["std"]
std = ["bitcoin/std", "internals/std"]

[dependencies]
bitcoin = { version = "0.32.0", default-features = false, features = ["serde", "base64"] }
internals = { package = "bitcoin-internals", version = "0.3.0", default-features = false, features = ["alloc"]}
serde = { version = "1.0.103", default-features = false, features = [ "derive", "alloc" ] }
serde_json = { version = "1.0.117" }

[dev-dependencies]
